// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextToast /> snapshot should match snapshot 1`] = `
<TextToast
  text="Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte."
>
  <div
    className="md-text-toast-wrapper"
    data-text-alignment="center"
  >
    <Text
      className="md-text-toast-text"
      tagName="small"
      type="body-secondary"
    >
      <Text
        className="md-text-wrapper md-text-toast-text"
        tagname="small"
        type="body-midsize-regular"
      >
        <mdc-text
          class="md-text-wrapper md-text-toast-text"
          suppressHydrationWarning={true}
        >
          Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte.
        </mdc-text>
      </Text>
    </Text>
  </div>
</TextToast>
`;

exports[`<TextToast /> snapshot should match snapshot with className 1`] = `
<TextToast
  className="example-class"
  text="Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte."
>
  <div
    className="example-class md-text-toast-wrapper"
    data-text-alignment="center"
  >
    <Text
      className="md-text-toast-text"
      tagName="small"
      type="body-secondary"
    >
      <Text
        className="md-text-wrapper md-text-toast-text"
        tagname="small"
        type="body-midsize-regular"
      >
        <mdc-text
          class="md-text-wrapper md-text-toast-text"
          suppressHydrationWarning={true}
        >
          Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte.
        </mdc-text>
      </Text>
    </Text>
  </div>
</TextToast>
`;

exports[`<TextToast /> snapshot should match snapshot with icon 1`] = `
<TextToast
  iconProps={
    Object {
      "name": "noise-removal",
    }
  }
  text="Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte."
>
  <div
    className="md-text-toast-wrapper"
    data-text-alignment="center"
  >
    <Icon
      name="noise-removal"
    >
      <Icon
        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
        data-autoscale={false}
        data-test="noise-removal"
        name="noise-removal-regular"
        style={Object {}}
      >
        <mdc-icon
          class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
          data-autoscale={false}
          data-test="noise-removal"
          style={Object {}}
          suppressHydrationWarning={true}
        />
      </Icon>
    </Icon>
    <Text
      className="md-text-toast-text"
      tagName="small"
      type="body-secondary"
    >
      <Text
        className="md-text-wrapper md-text-toast-text"
        tagname="small"
        type="body-midsize-regular"
      >
        <mdc-text
          class="md-text-wrapper md-text-toast-text"
          suppressHydrationWarning={true}
        >
          Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte.
        </mdc-text>
      </Text>
    </Text>
  </div>
</TextToast>
`;

exports[`<TextToast /> snapshot should match snapshot with id 1`] = `
<TextToast
  id="example-id"
  text="Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte."
>
  <div
    className="md-text-toast-wrapper"
    data-text-alignment="center"
    id="example-id"
  >
    <Text
      className="md-text-toast-text"
      tagName="small"
      type="body-secondary"
    >
      <Text
        className="md-text-wrapper md-text-toast-text"
        tagname="small"
        type="body-midsize-regular"
      >
        <mdc-text
          class="md-text-wrapper md-text-toast-text"
          suppressHydrationWarning={true}
        >
          Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte.
        </mdc-text>
      </Text>
    </Text>
  </div>
</TextToast>
`;

exports[`<TextToast /> snapshot should match snapshot with style 1`] = `
<TextToast
  style={
    Object {
      "color": "pink",
    }
  }
  text="Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte."
>
  <div
    className="md-text-toast-wrapper"
    data-text-alignment="center"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <Text
      className="md-text-toast-text"
      tagName="small"
      type="body-secondary"
    >
      <Text
        className="md-text-wrapper md-text-toast-text"
        tagname="small"
        type="body-midsize-regular"
      >
        <mdc-text
          class="md-text-wrapper md-text-toast-text"
          suppressHydrationWarning={true}
        >
          Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte.
        </mdc-text>
      </Text>
    </Text>
  </div>
</TextToast>
`;

exports[`<TextToast /> snapshot should match snapshot with textAlignment \`left\` 1`] = `
<TextToast
  text="Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte."
  textAlignment="left"
>
  <div
    className="md-text-toast-wrapper"
    data-text-alignment="left"
  >
    <Text
      className="md-text-toast-text"
      tagName="small"
      type="body-secondary"
    >
      <Text
        className="md-text-wrapper md-text-toast-text"
        tagname="small"
        type="body-midsize-regular"
      >
        <mdc-text
          class="md-text-wrapper md-text-toast-text"
          suppressHydrationWarning={true}
        >
          Lorem ipsum dolor site aw aetns ctetuer adipiscing elit nullam amarte adipiscing elit nullam amarte.
        </mdc-text>
      </Text>
    </Text>
  </div>
</TextToast>
`;
